Update schemas openAPI && Grades route.
