# ugc/src/static/api/v1/openapi.yaml
@@ -15,6 +15,7 @@ paths:
     post:
       tags:
         - events
+      summary: Create a new user event
       parameters:
         - in: query
           name: key
@@ -22,7 +23,6 @@ paths:
             type: string
             default: test_event
       requestBody:
-        description: Create a new user event
         content:
           application/json:
             schema:
@@ -37,18 +37,118 @@ paths:
           description: Forbidden
 
   /grades:
+    get:
+      tags:
+        - grades
+      summary: Получение списка оценок к фильмам пользователя
+      responses:
+        '201':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Grade'
+        '400':
+          description: Invalid request, missing required parameters
+        '403':
+          description: Forbidden
+
+  /grades/{film_id}:
     post:
       tags:
         - grades
+      summary: Создание новой оценки к фильму
       requestBody:
-        description: Create a new user event
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Grade'
-
+              $ref: '#/components/schemas/GradeCreate'
+      parameters:
+        - in: path
+          name: film_id
+          schema:
+            type: string
+            example: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+            default: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
       responses:
         '201':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Grade'
+        '400':
+          description: Invalid request, missing required parameters
+        '403':
+          description: Forbidden
+
+    get:
+      tags:
+        - grades
+      summary: Получение оценки к фильму
+      parameters:
+        - in: path
+          name: film_id
+          schema:
+            type: string
+            example: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+            default: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Grade'
+        '400':
+          description: Invalid request, missing required parameters
+        '403':
+          description: Forbidden
+
+    patch:
+      tags:
+        - grades
+      summary: Обновление оценки к фильму
+      parameters:
+        - in: path
+          name: film_id
+          schema:
+            type: string
+            example: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+            default: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GradeCreate'
+
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Grade'
+        '400':
+          description: Invalid request, missing required parameters
+        '403':
+          description: Forbidden
+
+    delete:
+      tags:
+        - grades
+      summary: Удаление оценки к фильму
+      parameters:
+        - in: path
+          name: film_id
+          schema:
+            type: string
+            example: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+            default: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+      responses:
+        '204':
           description: Successful operation
         '400':
           description: Invalid request, missing required parameters
@@ -88,14 +188,30 @@ components:
           example: Начало просмотра
 
     Grade:
-      required:
-        - film_id
-        - rating
       type: object
       properties:
+        id:
+          type: integer
+          example: 66624800d89be65ed7202397
         film_id:
           type: string
           example: cf083ea9-aa9f-4dd0-b8ee-29393c1a0a31
+        rating:
+          type: integer
+          format: int32
+          example: 10
+        user_id:
+          type: string
+          example: bf051197-081c-42ae-9ef3-566f49d58a73
+        timestamp:
+          type: string
+          example: Thu, 06 Jun 2024 23:36:32 GMT
+
+    GradeCreate:
+      required:
+        - rating
+      type: object
+      properties:
         rating:
           type: integer
           format: int32
